# NAOqiLiveCam

qt/NAOqiLiveCam/: NAOqiLiveCam.pro  audiooutput.cpp  audiooutput.h  buildNAOqiInterface.sh  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_audiooutput.cpp  moc_mainwindow.cpp  ui_mainwindow.h
qt/NAOqiLiveCam/NAOqi/nao_interface/: CMakeLists.txt  audiocaptureremote.cpp  audiocaptureremote.h  nao_interface.cpp  nao_interface.h  qiproject.xml
